kubernetes-manual/server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 80
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - image: marcusbuffett/newreads-server:latest
          name: server
          ports:
            - containerPort: 80
              name: server
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
