kubernetes-manual/web-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 80
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: marcusbuffett/newreads-web:latest
          name: web
          ports:
            - containerPort: 80
              name: web
