kubernetes-manual/server-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              serviceName: server
              servicePort: 80
